home menu text alignment fixed

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,15 +1,3 @@
-/* @import '../../Asset/Fonts/fonts.css';
-.footer {
-background-color:#c7c5bf;
-}
-
-.quick-Link{
-    color:#000;
-    font-family: "MADECoachellaRegular";
-    font-size: 20px;
-}
- */
-
 #footer {
   background: #c7c5bf;
   padding-left: 0px !important;
@@ -68,7 +56,7 @@ ul.subscribe li {
   font-size: 18px;
   color: #010101;
 }
-ul.subscribe li img{
+ul.subscribe li img {
   width: 28px;
   height: auto;
 }
